<resources>
    <string name="app_name">Look Up</string>
    <string name="device_info">Get Info</string>
    <string name="title_activity_main_activity3">Look Up</string>
    <string name="details">Details</string>
    <string name="share_details">Share Details</string>
    <string name="continue_details">Continue</string>
    <string name="enter_details">Enter Details</string>
    <string name="device_change">Device Change</string>
    <string name="vehicle_change">Vehicle Change</string>
    <string name="new_installation">New Installation</string>
    <string name="sim_change">Sim Change</string>
    <string name="enter_user_id">Please Enter User Id</string>
    <string name="auth_secret">5ed183673b9709a69e51ed86e6b53b</string>

    <string name="title_activity_login1">LoginActivity1</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repair">Repair</string>
    <string name="permissions">Give permissions</string>
    <string name="proceed">PROCEED</string>
    <string name="upload">UPLOAD</string>
    <string name="camera">Camera</string>
    <string name="update">UPDATE</string>
    <string name="upload_device_images">Upload Device Image (डिवाइस ईमेज अपलोड करें) (1 image)</string>
    <string name="upload_truck_images">Upload Truck Image (ट्रक ईमेज अपलोड करें) (1 image)</string>
    <string name="upload_wire_connection">Upload Wire Connection (वायर कनेक्शन अपलोड करें) (2 images)</string>
    <string name="upload_device_fitting">Upload Device Fitting (डिवाइस फिटिंग अपलोड करें) (3 images)</string>
    <string name="upload_accessories">Upload SOS, trip, relay Images (एसओएस, यात्रा, रिले ईमेज अपलोड करें)(2 images)</string>
    <string name="upload_earth_wire_connection">Upload Earth Wire Connection (अर्थ वायर कनेक्शन अपलोड करें) (1 image)</string>
    <string name="device_images">Device Images</string>
    <string name="truck_images">Truck Images</string>
    <string name="wire_connection_images">Wire Connection Images</string>
    <string name="earthwire_connection_images">Earth-Wire Connection Images</string>
    <string name="device_fitting_images">Device Fitting Images</string>
    <string name="accessories_images">Accessories Images</string>
    <string name="user_profile">User Profile \nउपयोगकर्ता प्रोफ़ाइल</string>
    <string name="check_repairs_logs">Check Repair Logs \n(मरम्मत लॉग की जांच करें)</string>
    <string name="check_install_logs">Check Install Logs \n(स्थापना लॉग की जांच करें)</string>
    <string name="check_profile">Check Profile \n(प्रोफाइल जांचें)</string>
    <string name="create_new_install">Create new installation \n(नई स्थापना बनाएँ)</string>
    <string name="creation_installation">create new trucks and attach tracking device \n(नए ट्रक बनाएं और ट्रैकिंग डिवाइस संलग्न करें)</string>
    <string name="installation_details">installationdetails</string>
    <string name="install_log_heading">Install Logs</string>
    <string name="repair_log_heading">Repair Logs</string>
    <string name="share">Share</string>
    <string name="truck_image_tag">truck_image</string>
    <string name="device_image_tag">device_image</string>
    <string name="wire_connection_tag">wire_connection</string>
    <string name="device_fitting_tag">device_fitting</string>
    <string name="accessories_tag">accessories</string>
    <string name="earth_wire_connection_tag">earth_wire_connection</string>
    <string name="fragment_name">Fragment Name</string>
    <string name="repair_log_fragment">Repair Log Fragment</string>
    <string name="repair_detail_fragment">Repair Detail Fragment</string>
    <string name="install_log_fragment">Install Log Fragment</string>
    <string name="tutorial_fragment">Tutorials Fragment</string>
    <string name="install_detail_fragmment">Install Detail Fragment</string>
    <string name="screenshot_fragment">Screenshot Fragment</string>
    <string name="screenshot_heading">Share</string>
    <string name="user_profile_fragment">UserProfile Fragment</string>
    <string name="user_profile_heading">User Profile</string>
    <string name="upload_documents_fragment">UploadDocuments Fragment</string>
    <string name="upload_documents_heading">Upload Documents</string>
    <string name="image_list">imageList</string>
    <string name="not_more_than">Not more than </string>
    <string name="images"> images</string>
    <string name="images_not_compressed">Images could not be compressed</string>
    <string name="please_wait">Please Wait...</string>
    <string name="internet_not_available">Internet not available</string>
    <string name="device_cant_be_empty">Device id can\'t be empty</string>
    <string name="truckno_cant_be_empty">Truck no or Fastag no can\'t be empty</string>
    <string name="user_cant_empty">User Id can\'t be Empty</string>
    <string name="swipe_to_refresh">Swipe to Refresh</string>
    <string name="add_device_image">Add Device Image</string>
    <string name="something_went_wrong">something went wrong</string>
    <string name="select_reasons">Select reasons</string>
    <string name="size_limit">size limit upto </string>
    <string name="want_to_exit">Are you sure you want to exit?</string>
    <string name="closing_application">Closing application</string>
    <string name="image_compressing">Image Compressing..</string>
    <string name="uploading">Uploading...</string>
    <string name="installation_creation_successfull">New Installation created successfully</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notification_title">Location Update</string>
    <string name="notification_text">LookUp Tracks You</string>
    <string name="fastag_before_pasting">Before Pasting Fastag</string>
    <string name="fastag_after_pasting">After Pasting Fastag \u002A</string>
    <string name="front_view1">Front View \u002A </string>
    <string name="side_view1">Side View \u002A</string>
    <string name="before_pasting_fastag">before_pasting_fastag</string>
    <string name="after_pasting_fastag">after_pasting_fastag</string>
    <string name="front_view">front_view</string>
    <string name="side_view">side_view</string>
    <string name="axle_info">Axle Info</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="colour">Colour</string>
    <string name="fastag_sno">Fastag Serial No</string>
    <string name="vehicle_photo">Vehicle Photo</string>
    <string name="truck_number">Enter truck no </string>
    <string name="continue_btn">Continue</string>
    <string name="scan_fastag">Scan Fastag</string>
    <string name="submit">Submit</string>
    <string name="new_fastag_image">Vehicle Photo(Optional)</string>
    <string name="qr_scanner">Scan bar code or Qr code, If there are more than One bar code cover remaining barcodes.</string>
    <string name="deviceDetail_deviceid">devideID</string>
    <string name="ignition_Restart_Test">Restart Test</string>
    <string name="ignition_Test_Continue">Continue</string>
    <string name="ignition_TestDialog_Title">Ignition Test</string>
    <string name="ignition_TestDialog_Message">Press ok to start the ignition test</string>
    <string name="tutorial_title">Tutorials / FAQ</string>
    <string name="igniton_Fragment_Tag">ignitionFragment</string>
    <string name="ignition_test_title">Ignition Test</string>
    <string name="devicedetail_deviceid">deviceDetail_deviceid</string>
    <string name="igtest_alert_dialog_yes">Yes</string>
    <string name="igtest_alert_dialog_no">No</string>
</resources>
