<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:id="@+id/scrool_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:divider="?android:attr/listDivider"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:clickable="true"
                android:elevation="3dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:shadowColor="@color/gray">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="8dp">

                    <TextView
                        android:id="@+id/serial_number_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Serial Number"
                        android:textSize="14sp"
                        custom:layout_constraintStart_toStartOf="parent" />

                    <TextView
                        android:id="@+id/serial_number_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        custom:layout_constraintBottom_toBottomOf="parent"
                        custom:layout_constraintTop_toBottomOf="@id/serial_number_tv" />

                    <TextView
                        android:id="@+id/truck_Number_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:text="Truck Number"
                        android:textSize="14sp"
                        custom:layout_constraintEnd_toEndOf="parent" />

                    <TextView
                        android:id="@+id/truck_number_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        custom:layout_constraintEnd_toEndOf="parent"
                        custom:layout_constraintTop_toBottomOf="@id/truck_Number_tv" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="5dp"
                custom:cardCornerRadius="@dimen/dimen_5dp"
                android:padding="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:shadowColor="@color/gray">

            <com.loconav.lookup.customcamera.CustomImagePicker
                android:id="@+id/ft_before_install"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                custom:id="@string/fastag_before_pasting"
                custom:limitImages="1"
                custom:titleText="@string/fastag_before_pasting" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="3dp"
                custom:cardCornerRadius="@dimen/dimen_5dp"
                android:padding="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:shadowColor="@color/gray">

            <com.loconav.lookup.customcamera.CustomImagePicker
                android:id="@+id/ft_installed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                custom:limitImages="1"
                custom:titleText="@string/fastag_after_pasting"
                custom:id="@string/fastag_after_pasting"/>
            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="3dp"
                custom:cardCornerRadius="@dimen/dimen_5dp"
                android:padding="10dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:shadowColor="@color/gray">
            <com.loconav.lookup.customcamera.CustomImagePicker
                android:id="@+id/front_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                custom:limitImages="1"
                custom:titleText="@string/front_view1"
                custom:id="@string/front_view1"/>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:elevation="3dp"
                custom:cardCornerRadius="@dimen/dimen_5dp"
                android:padding="10dp"
                android:paddingBottom="@dimen/dimen_5dp"
                android:foreground="?android:attr/selectableItemBackground"
                android:shadowColor="@color/gray">
            <com.loconav.lookup.customcamera.CustomImagePicker
                android:id="@+id/side_view1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?android:selectableItemBackground"
                custom:limitImages="1"
                custom:titleText="@string/side_view1"
                custom:id="@string/side_view1"/>
            </androidx.cardview.widget.CardView>

            <Button
                android:id="@+id/ftPhoto_upload"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="Upload Photos"
                custom:layout_constraintBottom_toBottomOf="@id/linearLayout1" />
        </LinearLayout>
    </ScrollView>

</layout>