<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res-auto">
    <ScrollView
        android:background="@color/white"
        android:clickable="true"
        android:layout_width="match_parent"
        android:divider="?android:attr/listDivider"
        android:layout_height="match_parent"
        android:scrollbars="none">
        <LinearLayout
            android:padding="15dp"
            android:animateLayoutChanges="true"
            android:id="@+id/linear"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <android.support.design.widget.TextInputLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/dealer_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Dealer's name*" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Location*"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/registration_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Registration no."/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/chassis_no"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Chassis no"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/manufacture"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Manufacture*"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Model*"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/type_of_goods"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Type of goods"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/odometer_reading"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Odometer Reading" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/sim_no"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Sim No*" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/imei"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="IMEI*" />
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/device_model"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Device Model"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/owner_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Owner Nmae"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/client_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Client id "/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <EditText
                    android:layout_marginTop="10dp"
                    android:id="@+id/transporter_id"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Transporter id "/>
            </android.support.design.widget.TextInputLayout>
            <CheckBox
                android:id="@+id/cb_trip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Trip Button"/>
            <CheckBox
                android:id="@+id/cb_sos"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SOS"/>
            <CheckBox
                android:id="@+id/cb_imm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Immobilizer"/>
            <com.loconav.lookup.CustomImagePicker
                custom:id="truckimages"
                android:layout_width="match_parent"
                android:id="@+id/TruckImages"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:selectableItemBackground"
                custom:titleText="@string/upload_truck_images"
                custom:limitImages="1"/>
            <com.loconav.lookup.CustomImagePicker
                android:id="@+id/DeviceImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:selectableItemBackground"
                custom:id="deviceimages"
                custom:titleText="@string/upload_device_images"
                custom:limitImages="1"/>
            <com.loconav.lookup.CustomImagePicker
                android:id="@+id/WireConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:selectableItemBackground"
                custom:id="wireconnection"
                custom:titleText="@string/upload_wire_connection"
                custom:limitImages="2">
            </com.loconav.lookup.CustomImagePicker>

            <com.loconav.lookup.CustomImagePicker
                android:id="@+id/Accessories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="0"
                android:background="?android:selectableItemBackground"
                android:visibility="gone"
                custom:id="accessories"
                custom:limitImages="2"
                custom:titleText="@string/upload_accessories" />
            <com.loconav.lookup.CustomImagePicker
                android:id="@+id/EarthwireConnection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:selectableItemBackground"
                custom:id="earthwireconnection"
                custom:titleText="@string/upload_earth_wire_connection"
                custom:limitImages="1"/>
            <com.loconav.lookup.CustomImagePicker
                android:id="@+id/DeviceFitting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:background="?android:selectableItemBackground"
                custom:id="devicefitting"
                custom:titleText="@string/upload_device_fitting"
                custom:limitImages="3"/>

            <Button
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:id="@+id/share"
                android:layout_width="300sp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="18dp"
                android:gravity="center"
                android:textSize="18sp"
                android:text="Next"
                android:textColor="#ffffff" />

        </LinearLayout>

    </ScrollView >
</layout>